--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
   "name": "week-1-reading",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "formidable": "^1.0.17"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chops318/nodebeginner.git"
+  },
+  "bugs": {
+    "url": "https://github.com/chops318/nodebeginner/issues"
+  },
+  "homepage": "https://github.com/chops318/nodebeginner#readme",
+  "description": ""
 }
